# eeg-ufal

./: app.py  pyproject.toml  requirements.txt
src/: eeg2text_page.py
src/eeg2text/: __init__.py  generator.py
